--- a/app/templates/push/rollback.twig
+++ b/app/templates/push/rollback.twig
@@ -52,7 +52,7 @@
                     </td>
                     <td>
                         {% if push.build.status == 'Success'%}
-                            {% if canUserPush(currentUser, repo.key, push.build.server.environment.key) %}
+                            {% if push.deployment and canUserPush(currentUser, repo.key, push.build.server.environment.key) %}
                                 <a href="{{ urlFor('push.start', {'repo': repo.key, 'build': push.build.id}, {deployment: push.deployment.id}) }}">Rollback</a>
                             {% endif %}
                         {% elseif push.build.status == 'Removed' %}
