Update push page to link to repo using build. Change rollback page to still have a rollback button even if a deployment is removed (unused unless the orphan push is re-linked to a new deployment).

--- a/app/templates/push/push.twig
+++ b/app/templates/push/push.twig
@@ -4,9 +4,7 @@
 
 {% block content %}
 
-    {% if push.deployment %}
-        <p><a class="btn--small btn--back" href="{{ urlFor('repository.status', {'id': push.deployment.repository.id}) }}">Back to Repository Status</a></p>
-    {% endif %}
+    <p><a class="btn--small btn--back" href="{{ urlFor('repository.status', {'id': push.build.repository.id}) }}">Back to Repository Status</a></p>
 
     <h2 class="mbn">Push Details</h2>
 
