Change logs to Audit Logs

--- a/app/templates/admin/dashboard.twig
+++ b/app/templates/admin/dashboard.twig
@@ -17,7 +17,7 @@
             </li>
             <li>
                 <a href="{{ urlFor('logs') }}" class="btn btn--primary">
-                    <svg class="icon" viewBox="0 0 32 32"><use xlink:href="#tick"></use></svg> Logs
+                    <svg class="icon" viewBox="0 0 32 32"><use xlink:href="#tick"></use></svg> Audit Logs
                 </a>
             </li>
             <li>
