--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -12,10 +12,13 @@ $dark-blue: #01002b;
 
 $red: #d63620;
 
+$orange: #ff7c00;
+$dark-orange: #cc6300;
+
 $yellow: #e0a63a;
 $light-yellow: #fafad2;
 
-$warning-color: #ff7c00;
+$warning-color: $orange;
 $error-color: $red;
 $success-color: #00c92c;
 
