Clean up env ordering page

--- a/app/templates/environment/admin.reorder.twig
+++ b/app/templates/environment/admin.reorder.twig
@@ -4,24 +4,31 @@
 
 {% block content %}
     <h2>Reorder Environments</h2>
+    <p>Drag environments into the desired order, or manually assign orders with the text input.</p>
 
     <form action="{{ urlFor('environment.admin.reorder.handle') }}" method="post">
-        <table class="t50" id="env-reorder">
+        <table id="env-reorder">
             <thead>
             <tr>
-                <th></th>
-                <th>Display Order</th>
+                <th class="t5"></th>
+                <th class="t15">Order</th>
+                <th>Name</th>
             </tr>
             </thead>
             <tbody>
             {% for env in envs %}
                 <tr class="env-row-{{ env.key }}">
-                    <td><span class="icon-sort"></span> {{ env.key }}</td>
-                    <td><input type="text" maxlength="3" required name="env{{ env.id }}" value="{{ env.order }}" class="text-input"></td>
+                    <td>
+                        <svg viewBox="0 0 32 32" class="icon">
+                            <use xlink:href="#menu-2"></use>
+                        </svg>
+                    </td>
+                    <td><input type="text" maxlength="2" required name="env{{ env.id }}" value="{{ env.order }}" class="text-input"></td>
+                    <td>{{ env.key }}</td>
                 </tr>
             {% else %}
                 <tr>
-                    <td colspan="2">There are no environments.</td>
+                    <td colspan="3">There are no environments.</td>
                 </tr>
             {% endfor %}
             </tbody>
